--- a/api/composer.json
+++ b/api/composer.json
@@ -29,7 +29,8 @@
         "symfony/serializer": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/validator": "6.1.*",
-        "symfony/yaml": "6.1.*"
+        "symfony/yaml": "6.1.*",
+        "symfonycasts/verify-email-bundle": "^1.12"
     },
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
