--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -27,3 +27,10 @@ services:
         decorates: 'api_platform.openapi.factory'
         arguments: ['@App\OpenApi\OpenApiFactory.inner']
         autoconfigure: false
+
+    App\EventListener\ClientEvent: 
+        tags:
+            -
+                name: 'doctrine.orm.entity_listener'
+                event: 'postPersist'
+                entity: 'App\Entity\Client'
